zebra-rpc/src/methods/tests/snapshots/get_blockchain_info@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: info
---
{
  "chain": "test",
  "blocks": 10,
  "bestblockhash": "079f4c752729be63e6341ee9bce42fbbe37236aba22e3deb82405f3c2805c112",
  "estimatedheight": "[Height]",
  "valuePools": [
    {
      "id": "transparent",
      "chainValue": 0.034375,
      "chainValueZat": 3437500
    },
    {
      "id": "sprout",
      "chainValue": 0.0,
      "chainValueZat": 0
    },
    {
      "id": "sapling",
      "chainValue": 0.0,
      "chainValueZat": 0
    },
    {
      "id": "orchard",
      "chainValue": 0.0,
      "chainValueZat": 0
    },
    {
      "id": "deferred",
      "chainValue": 0.0,
      "chainValueZat": 0
    }
  ],
  "upgrades": {
    "5ba81b19": {
      "name": "Overwinter",
      "activationheight": 207500,
      "status": "pending"
    },
    "76b809bb": {
      "name": "Sapling",
      "activationheight": 280000,
      "status": "pending"
    },
    "2bb40e60": {
      "name": "Blossom",
      "activationheight": 584000,
      "status": "pending"
    },
    "f5b9230b": {
      "name": "Heartwood",
      "activationheight": 903800,
      "status": "pending"
    },
    "e9ff75a6": {
      "name": "Canopy",
      "activationheight": 1028500,
      "status": "pending"
    },
    "c2d6d0b4": {
      "name": "NU5",
      "activationheight": 1842420,
      "status": "pending"
    },
    "c8e71055": {
      "name": "Nu6",
      "activationheight": 2976000,
      "status": "pending"
    },
    "ffffffff": {
      "name": "ZFuture",
      "activationheight": 3000000,
      "status": "pending"
    }
  },
  "consensus": {
    "chaintip": "00000000",
    "nextblock": "00000000"
  }
}
